# fb-seeder-tool

./: package.json  pnpm-lock.yaml
.github/workflows/: playwright.yml  test-on-pr.yml
src-tauri/: Cargo.toml
